--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "news",
+  "name": "pim-web",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -17,6 +17,7 @@
     "vue": "^3.2.23",
     "vue-cropper": "^1.0.2",
     "vue-router": "^4.0.12",
+    "vue3-emoji-picker": "^1.0.1",
     "vue3-menus": "^1.1.2",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0"
