--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.4",
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.19.1",
+    "dayjs": "^1.10.7",
     "element-plus": "^1.2.0-beta.5",
     "jsencrypt": "^3.2.1",
     "si-grenoble": "^0.5.0",
