--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.2.23",
     "vue-cropper": "^1.0.2",
     "vue-router": "^4.0.12",
+    "vue3-discordpicker": "^1.1.0",
     "vue3-menus": "^1.1.2",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0"
