--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.10.7",
     "element-plus": "^1.2.0-beta.5",
     "jsencrypt": "^3.2.1",
+    "mockjs": "^1.1.0",
     "si-grenoble": "^0.5.0",
     "vue": "^3.2.23",
     "vue-cropper": "^1.0.2",
