--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@element-plus/icons": "0.0.11",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.4",
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.19.1",
